<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AgonyAunt</string>
    <string name="answer">Enter your answer </string>
    <string name="mood_tracker">Mood Tracker</string>
    <string name="preferences">My Preferences</string>
    <string name="profile">My Profile &amp; Preferences</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mood_tracker">MoodTracker</string>
    <string name="title_activity_intervention">Intervention</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_activity_create_notification">CreateNotificationActivity</string>
    <string name="title_activity_notification_receiver">NotificationReceiverActivity</string>
    <string name="title_activity_my_preferences">MyPreferences</string>
    <string name="title_activity_question2">Question2</string>
    <string name="title_activity_intervention_notifier">InterventionNotifier</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_all_patients">AllPatients</string>
    <string name="title_activity_new_patient">NewPatientActivity</string>
    <string name="title_activity_edit_patient">EditPatientActivity</string>
    <string name="title_activity_notification">Agony Aunt</string>
    <string name="title_activity_chat">It&quot;s time for a chat!</string>
    <string name="tab_Personal">Personal</string>
    <string name="tab_AIPatient">AI Patient</string>
    <string name="tab_Train">Train Networks</string>
    <string name="tab_Update">Update Networks</string>
    <string name="username">My Username</string>
    <string name="patientName">Patient Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="intervFreqQ">How often would you like to receive interventions during the day</string>
    <string name="intervSlotQ">When would you prefer to receive interventions during the day</string>
    <string name="freq1">1</string>
    <string name="freq2">2</string>
    <string name="freq3">3</string>
    <string name="freq4">4</string>
    <string name="freq5">5</string>
    <string name="freq6">6</string>
    <string name="freq7">7</string>
    <string name="slot1">Early Morning 04:00-07:00</string>
    <string name="slot2">Morning 07:00-12:00</string>
    <string name="slot3">Afternoon 12:00-17:00</string>
    <string name="slot4">Evening 17;00-21:00</string>
    <string name="slot5">Night 21:00-00:00</string>
    <string name="slot6">Late Night 00:00-04:00</string>
    <string name="button_next">Next</string>
    <string name="button_save">Save</string>
    <string name="button_back">Back</string>
    <string name="button_done">Done</string>
    <string name="button_create">Create Patient</string>
    <string name="button_update">Update Patient</string>
    <string name="button_delete">Delete Patient</string>
    <string name="button_demo">Demo Chat with Grandma</string>
    <string name="button_add_new">Add New Patient</string>
    <string name="button_show_all">Show all patients</string>
    <string name="train_freq">Train Frequency Intervention Neural Network</string>
    <string name="train_slot">Train Time Slot Intervention Neural Network</string>
    <string name="train_seq">Train Select Sequence Neural Network</string>
    <string name="train_goal">Train Select Group Question Goal Neural Network</string>
    <string name="train_behav">Train Select Group Question Behaviour Neural Network</string>
    <string name="update_freq">Update Frequency Intervention Neural Networks</string>
    <string name="update_slot">Update Time Slot Intervention Neural Networks</string>
    <string name="update_seq">Update Select Sequence Neural Networks</string>
    <string name="update_goal">Update Select Group Question Goal Neural Networks</string>
    <string name="update_behav">Update Select Group Question Behaviour Neural Networks</string>
    <string name="speak">Speak to you</string>
    <string name="question">Question</string>
    <string name="low1">Not very</string>
    <string name="low2">OK</string>
    <string name="low3">Very</string>
    <string name="resultString"></string>
    <string name="freqCount">freqCount</string>
    <string name="control1"></string>

</resources>