<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/chat_background"
    tools:context=".EditPatientActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/EditNameText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/patientName" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditAgeText"
        android:hint="@string/age"
        android:layout_below="@+id/editTextName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditGender"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/EditrbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/genderMale" />

        <RadioButton
            android:id="@+id/EditrbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderFemale"
            android:checked="false" />


    </RadioGroup>

    <TextView
        android:id="@+id/EditFrequencyText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/intervFreqQ" />

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar android:id="@+id/EditFrequencyBar"
            android:layout_width="fill_parent"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            android:progress="0"
            android:max="@integer/num_freq"
            />

        <TextView android:id="@+id/EditFrequencyCounter"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/EditSlotText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/intervSlotQ" />


    <CheckBox
        android:id="@+id/EditCheckBox0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot1" />

    <CheckBox
        android:id="@+id/EditCheckBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot2" />

    <CheckBox
        android:id="@+id/EditCheckBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot3" />

    <CheckBox
        android:id="@+id/EditCheckBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot4" />

    <CheckBox
        android:id="@+id/EditCheckBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot5" />

    <CheckBox
        android:id="@+id/EditCheckBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot6" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_update"
            android:id="@+id/btnUpdatePatient"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete"
            android:id="@+id/btnDeletePatient"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/btnUpdatePatient"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
