<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/chat_background"
    tools:context=".NewPatientActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/NewNameText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/patientName" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewAgeText"
        android:hint="@string/age"
        android:layout_below="@+id/newTextName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/NewGender"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/NewrbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/genderMale" />

        <RadioButton
            android:id="@+id/NewrbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderFemale"
            android:checked="false" />


    </RadioGroup>

        <TextView
            android:id="@+id/NewFrequencyText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/intervFreqQ" />

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar android:id="@+id/NewFrequencyBar"
                android:layout_width="fill_parent"
                android:layout_weight="10"
                android:layout_height="wrap_content"
                android:progress="0"
                android:max="7"
                />

            <TextView android:id="@+id/NewFrequencyCounter"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/NewSlotText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/intervSlotQ" />


        <CheckBox
            android:id="@+id/NewCheckBox0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slot1" />

        <CheckBox
            android:id="@+id/NewCheckBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slot2" />

        <CheckBox
            android:id="@+id/NewCheckBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slot3" />

        <CheckBox
            android:id="@+id/NewCheckBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slot4" />

        <CheckBox
            android:id="@+id/NewCheckBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slot5" />

        <CheckBox
            android:id="@+id/NewCheckBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slot6" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_create"
            android:id="@+id/btnCreatePatient"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
