<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/chat_background"
    tools:context=".MyProfile.MyPreference" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical">

    <EditText
        android:id="@+id/MyUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/MyAge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/MyGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/age"
        android:layout_marginTop="@dimen/activity_vertical_margin" >

        <RadioButton
            android:id="@+id/MyrbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/genderMale" />

        <RadioButton
            android:id="@+id/MyrbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderFemale" />

    </RadioGroup>



    <TextView
        android:id="@+id/MyFrequencyText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/intervFreqQ" />

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar android:id="@+id/MyFrequencyBar"
            android:layout_width="fill_parent"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            android:progress="0"
            android:max="@integer/num_freq"
            />

        <TextView android:id="@+id/MyFrequencyCounter"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:paddingRight="10dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/MySlotText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/intervSlotQ" />


    <CheckBox
        android:id="@+id/MyCheckBox0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot1" />

    <CheckBox
        android:id="@+id/MyCheckBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot2" />

    <CheckBox
        android:id="@+id/MyCheckBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot3" />

    <CheckBox
        android:id="@+id/MyCheckBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot4" />

    <CheckBox
        android:id="@+id/MyCheckBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot5" />

    <CheckBox
        android:id="@+id/MyCheckBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot6" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="saveProfile" />

    <Button
        android:id="@+id/btnBackProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btnSaveProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="backButtonProfile" />

    </RelativeLayout>

    </LinearLayout>

</RelativeLayout>